[gd_scene load_steps=10 format=3 uid="uid://72gjoc64cwh7"]

[ext_resource type="Script" path="res://hud.gd" id="1_xgvma"]
[ext_resource type="Texture2D" uid="uid://b27s7282x5jv6" path="res://assets/sprites/logo.png" id="2_287me"]
[ext_resource type="FontFile" uid="uid://xd8ie85t2fmp" path="res://assets/fonts/8-bit-pusab.woff" id="2_gh2lx"]
[ext_resource type="Texture2D" uid="uid://cxe04eraccs5b" path="res://assets/sprites/pauseIcon.png" id="4_1r83e"]
[ext_resource type="FontFile" uid="uid://17jhidfd0uhh" path="res://assets/fonts/Pixeltype.woff" id="6_laav8"]
[ext_resource type="Script" path="res://addons/multidirectionnal joystick/script/joystick.gd" id="7_8x72m"]
[ext_resource type="Texture2D" uid="uid://binbbs1n05hjp" path="res://addons/multidirectionnal joystick/textures/bigger.svg" id="8_ejt4m"]
[ext_resource type="Texture2D" uid="uid://b0aa2lh3taqxh" path="res://addons/multidirectionnal joystick/textures/smaller.svg" id="9_urue0"]

[sub_resource type="Shortcut" id="Shortcut_y3i6y"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_xgvma")

[node name="Message" type="Label" parent="."]
visible = false
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -50.0
offset_right = 51.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_gh2lx")
theme_override_font_sizes/font_size = 12
text = "Get Ready"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultidirectionnalJoystick" type="Node2D" parent="."]
visible = false
position = Vector2(36, 146)
scale = Vector2(0.3, 0.3)
script = ExtResource("7_8x72m")
bigger_texture = ExtResource("8_ejt4m")
small_texture = ExtResource("9_urue0")
amount_of_directions = 120

[node name="Logo" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(129, 72)
texture = ExtResource("2_287me")

[node name="PauseOverlay" type="ColorRect" parent="."]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.396078)

[node name="PauseMessage" type="Label" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -11.5
offset_right = 23.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_gh2lx")
theme_override_font_sizes/font_size = 12
text = "Pause"

[node name="CreditsMessage" type="Label" parent="PauseOverlay"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -94.0
offset_right = 111.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_laav8")
theme_override_font_sizes/font_size = 16
text = "Plugins
Godot Multidirectional Joystick - JstnJrg

Programs Used
Aseprite - Igara Studio S.A

Music & SFX
Kalypo - Spring Spring
Flux Capacitor (No Marty) - Frenchyboy
Atari Booms - dklon

Special Thanks
CodeStack Academy"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_right = -8.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_gh2lx")
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 2

[node name="StartButton" type="Button" parent="."]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.0
offset_top = -44.0
offset_right = 27.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_laav8")
theme_override_font_sizes/font_size = 16
shortcut = SubResource("Shortcut_y3i6y")
shortcut_in_tooltip = false
text = "Start"

[node name="CreditsButton" type="Button" parent="."]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.0
offset_top = -23.0
offset_right = 27.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_laav8")
theme_override_font_sizes/font_size = 16
shortcut_in_tooltip = false
text = "Credits"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PauseButton" type="TextureButton" parent="."]
process_mode = 3
visible = false
texture_filter = 1
offset_left = 8.0
offset_top = 3.0
offset_right = 24.0
offset_bottom = 19.0
shortcut = SubResource("Shortcut_y3i6y")
shortcut_in_tooltip = false
texture_normal = ExtResource("4_1r83e")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
